--- a/ADTestLabs/en.lproj/MainStoryboard.storyboard
+++ b/ADTestLabs/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="VDW-aX-z4n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="VDW-aX-z4n">
     <dependencies>
         <deployment version="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
@@ -3266,16 +3266,16 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="63L-Kh-Plc"/>
         <segue reference="Gae-IP-656"/>
-        <segue reference="Tk3-gR-y9U"/>
-        <segue reference="h6q-xC-ZPi"/>
-        <segue reference="yWT-T4-BfA"/>
-        <segue reference="0W1-he-eGo"/>
-        <segue reference="Jyq-6q-2FB"/>
-        <segue reference="Tzx-HO-xTp"/>
-        <segue reference="ziz-bK-pAj"/>
         <segue reference="I6O-vU-uW3"/>
         <segue reference="4Rc-vO-WfN"/>
         <segue reference="ouR-xz-qpj"/>
+        <segue reference="h6q-xC-ZPi"/>
+        <segue reference="Jyq-6q-2FB"/>
+        <segue reference="ziz-bK-pAj"/>
+        <segue reference="0W1-he-eGo"/>
+        <segue reference="Tzx-HO-xTp"/>
+        <segue reference="Tk3-gR-y9U"/>
     </inferredMetricsTieBreakers>
 </document>
